--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context="com.tifinnearme.priteshpatel.materialdrawer.NavigationFragment">
+    tools:context="com.tifinnearme.priteshpatel.materialdrawer.material_test.NavigationFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
