--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,10 +7,16 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
     <item
         android:id="@+id/navigate"
         android:icon="@drawable/arrow_right"
         android:orderInCategory="200"
         android:title="@string/next"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_tabs_using_library"
+        android:orderInCategory="300"
+        android:title="@string/action_tabs_using_library"
+        app:showAsAction="never" />
 </menu>
