Working fine with movie image and movie title

--- a/app/src/main/res/layout/fragment_box_office.xml
+++ b/app/src/main/res/layout/fragment_box_office.xml
@@ -4,7 +4,10 @@
     tools:context="com.tifinnearme.priteshpatel.materialdrawer.fragments.FragmentBoxOffice">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/movies_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
