Added upcoming section on left

--- a/app/src/main/res/layout/custom_movie_box_office.xml
+++ b/app/src/main/res/layout/custom_movie_box_office.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
+    android:clickable="true">
     <ImageView
         android:layout_width="65dp"
         android:layout_height="84dp"
@@ -10,7 +12,8 @@
         android:layout_marginLeft="10dp"/>
     <TextView
         android:textColor="#000"
-        android:textSize="15dp"
+        android:textSize="18dp"
+        android:textStyle="italic|bold"
         android:id="@+id/movie_name"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
