--- a/app/src/main/res/layout/activity_main_appbar.xml
+++ b/app/src/main/res/layout/activity_main_appbar.xml
@@ -8,7 +8,16 @@
     <include
         android:id="@+id/app_bar"
         layout="@layout/app_bar"></include>
+    <!--Tabs for texts-->
     <it.neokree.materialtabs.MaterialTabHost
+        android:id="@+id/materialTabHost"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        app:textColor="#FFFFFF"
+        app:primaryColor="@color/primaryColor"
+        app:accentColor="@color/accentColor" />
+
+    <!-- Tabs for icons <it.neokree.materialtabs.MaterialTabHost
         android:id="@+id/materialTabHost"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -16,7 +25,7 @@
         app:primaryColor="@color/primaryColor"
         app:accentColor="@color/accentColor"
         app:hasIcons="true"/>
-
+-->
     <android.support.v4.view.ViewPager
         android:layout_below="@+id/materialTabHost"
         android:layout_width="match_parent"
