--- a/app/src/main/res/layout/activity_using_tab_library.xml
+++ b/app/src/main/res/layout/activity_using_tab_library.xml
@@ -10,22 +10,22 @@
     <include
         android:id="@+id/app_bar"
         layout="@layout/app_bar"></include>
-    <!--<it.neokree.materialtabs.MaterialTabHost
+    <it.neokree.materialtabs.MaterialTabHost
         android:id="@+id/materialTabHost"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         app:textColor="#FFFFFF"
         app:primaryColor="@color/primaryColor"
-        app:accentColor="@color/accentColor" />-->
+        app:accentColor="@color/accentColor" />
 
-    <it.neokree.materialtabs.MaterialTabHost
+    <!-- Tabs for icons <it.neokree.materialtabs.MaterialTabHost
         android:id="@+id/materialTabHost"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         app:iconColor="#FFFFFF"
         app:primaryColor="@color/primaryColor"
         app:accentColor="@color/accentColor"
-        app:hasIcons="true"/>
+        app:hasIcons="true"/>-->
 
     <android.support.v4.view.ViewPager
         android:layout_below="@+id/materialTabHost"
