--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -2,13 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.tifinnearme.priteshpatel.materialdrawer.fragments.FragmentBoxOffice">
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refreshButtonUpcoming"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/movies_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         ></android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
