--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    android:id="@+id/scrollMOview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="75dp"
-        android:layout_height="90dp"
-        android:id="@+id/movie_detail_image"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_centerHorizontal="true"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/movie_name"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/movie_detail_image"
-        android:text="Dummy text"
-        />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+
+
+            <ImageView
+                android:id="@+id/movie_detail_image"
+                android:layout_width="320dp"
+                android:layout_height="480dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/movie_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/movie_detail_image"
+                android:layout_marginLeft="30dp"
+                android:text="Dummy text" />
+
 
 </RelativeLayout>
+    </ScrollView>
