--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -13,7 +13,7 @@
 
             <ImageView
                 android:id="@+id/movie_detail_image"
-                android:layout_width="320dp"
+                android:layout_width="match_parent"
                 android:layout_height="480dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="10dp"
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/movie_detail_image"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="5dp"
                 android:text="Dummy text" />
 
 
