--- a/app/src/main/res/layout/custom_movie_box_office.xml
+++ b/app/src/main/res/layout/custom_movie_box_office.xml
@@ -3,7 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:background="@drawable/ripple"
+    >
     <!--android:background="@drawable/custom_border"-->
 
 
