--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#F44336</color>
+    <!--<color name="primaryColor">#F44336</color>
     <color name="primaryDark">#D32F2F</color>
+    <color name="accentColor">#00BCD4</color>-->
+    <color name="primaryColor">#009688</color>
+    <color name="primaryDark">#00796B</color>
     <color name="accentColor">#00BCD4</color>
+
 </resources>
