--- a/app/src/main/res/drawable/round_button_clicked.xml
+++ b/app/src/main/res/drawable/round_button_clicked.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#F8BBD0"/>
-    <stroke android:width="0dp" android:color="#fff" />
+    <solid android:color="@color/accentColor"/>
+    <stroke android:width="0px" android:color="#fff" />
 </shape>
