--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -3,6 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
 
-    android:background="#F44336">
+    android:background="@color/primaryColor">
 
 </android.support.v7.widget.Toolbar>
