Added last release date

--- a/app/src/main/res/layout/custom_tv_dialog.xml
+++ b/app/src/main/res/layout/custom_tv_dialog.xml
@@ -47,10 +47,8 @@
             android:layout_below="@id/genres"
              />
 
-
-
         <TextView
-            android:id="@+id/air_date"
+            android:id="@+id/last_air_date"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,6 +60,33 @@
             android:textSize="18dp"
             android:textStyle="bold|normal"
             android:text="Last Air Date:" />
+        <TextView
+            android:id="@+id/last_air_date_text"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="Not available"
+            android:layout_above="@+id/air_date"
+            android:layout_toEndOf="@+id/air_date" />
+
+
+
+
+        <TextView
+            android:id="@+id/air_date"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/last_air_date"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textColor="#000"
+            android:textSize="18dp"
+            android:textStyle="bold|normal"
+            android:text="First Air Date:" />
         <TextView
             android:id="@+id/first_air_date"
 
